tests/golden/infer/success/variant_match.ziku
\x => match x { | Num(n) => n | Nil => 0}
