tests/golden/infer/error/variant_arity_mismatch.ziku
-- Constructor arity mismatch: Num takes 1 arg, but pattern has 2
match Num(1) { | Num(x, y) => x}
